<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.briometrix.briomap.SettingActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/loginbackground2x">
    <ScrollView
        android:id="@+id/setting_form"
        android:layout_width="336dp"
        android:layout_height="519dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="Settings"
                android:textSize="16dip"
                android:textColor="#FFFFFF"
                />

            <Button
                android:id="@+id/changeEmail_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_email"
                android:textStyle="bold"
                android:background="@drawable/buttonrectangle"
                android:textColor="#FFFFFF"/>
            <Button
                android:id="@+id/changePwd_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_password"
                android:textStyle="bold"
                android:background="@drawable/buttonrectangle"
                android:textColor="#FFFFFF"/>
            <Button
                android:id="@+id/delete_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/delete_user"
                android:textStyle="bold"
                android:background="@drawable/buttonrectangle"
                android:textColor="#FFFFFF"/>
            <Button
                android:id="@+id/signout_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/signout"
                android:textStyle="bold"
                android:background="@drawable/buttonrectangle"
                android:textColor="#FFFFFF"/>

            <Button android:id="@+id/cancel_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/cancel"
                android:gravity="center"
                android:textSize="16dip"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
